BS-12096 add grab cursor on swapping columns : FIX dropdown overflow

--- a/looknfeel/src/main/less/skin/bootstrap/portal/applications/case-list.less
+++ b/looknfeel/src/main/less/skin/bootstrap/portal/applications/case-list.less
@@ -89,6 +89,9 @@
 	.dropdown-menu {
 		overflow-y: auto;
 		max-height: 315px;
+		&.bo-TableSettings-content{
+		  overflow-y: visible;
+		}
 	}
 
 	.glyphicon-none:before {
